[project]
name = "vkgifsbackend"
version = "0.1.0"
description = "This is a backend of vkgifsbot idea"
authors = [
    {name = "yepIwt",email = "ReetRay@protonmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.code-quality.dependencies]
flake8 = "^7.1.1"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
pylint = "^3.3.4"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.4"

